@@ -5,7 +5,7 @@ includedir=@includedir@
 
 Name: cluttermm-cairo
 Description: C++ wrapper for clutter
-Requires: clutter-0.6 cluttermm-1.0 cairomm-1.0
+Requires: clutter-0.6 cluttermm-@API_VER@ cairomm-1.0
 Version: @VERSION@
-Libs: -L${libdir} -lcluttermm-cairo-1.0
-Cflags: -I${includedir}/cluttermm-cairo-1.0
+Libs: -L${libdir} -lcluttermm-cairo-@API_VER@
+Cflags: -I${includedir}/cluttermm-cairo-@API_VER@
