@@ -1,3 +1,9 @@
+2008-06-02   Denis Leroy  <denis@poolshark.org>
+
+	* clutter-cairo/cluttermm-cairo.pc.in:
+	* clutter-gtk/cluttermm-gtk.pc.in: Use API_VER so the correct library 
+	names are used.
+
 0.5.1:
 
 2008-05-06  Murray Cumming  <murrayc@murrayc.com>
